--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -7,7 +7,7 @@
 			<a class="nav-link active mx-2 text-white" id="deco3" href="{{ path('app_login') }}">Connexion</a>
 			<a class="nav-link active text-white mx-2" href="{{ path('app_disque_index') }}">Produits</a>
 			<a class="nav-link active text-white mx-2" href="{{ path('app_artiste_index') }}">Artistes</a>
-			<a class="nav-link active text-white mx-2" href="../views/panier.php"><img src="../images/cart-shopping-svgrepo-com.svg" alt="panier" class="cart filterInvert" id="panier"></a>
+			<a class="nav-link active text-white mx-2" href="{{ path('cart_index') }}"><img src="../images/cart-shopping-svgrepo-com.svg" alt="panier" class="cart filterInvert" id="panier"></a>
 		</div>
 		<div class="d-flex px-2 align-items-center">
 			{% if app.user %}
