--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -66,6 +66,7 @@
 				<td class="text-center d-flex justify-content-start align-middle">
 							<a href="{{ path('cart_empty') }}" class="btn btn-danger btn-medium me-2  btn-rounded-none">Vider le panier</a>
 							<a href="{{ path('app_disque_index') }}" class="btn btn-primary btn-medium me-2  btn-rounded-none">Retour aux produits</a>
+							<a href="{{ path('app_orders_validate') }}" class="btn btn-success btn-medium me-2  btn-rounded-none">Valider la commande</a>
 
 						</td>
 						
