--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -22,7 +22,7 @@
 		<input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}">
     </div>
      <div class="p-2">
-		<label for="password" class="form-label">Password:</label>
+		<label for="password" class="form-label">Mot de passe:</label>
 		<input
 		class="form-control" type="password" id="password" name="_password">
     </div>
