--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -11,13 +11,29 @@
 		</div>
 		<div class="d-flex px-2 align-items-center">
 			{% if app.user %}
-				<a class="nav-link active text-white mx-2" href="{{path('app_user_show', {id: app.user.id})}}">Compte</a>
-				<a class="nav-link active text-white mx-2" href="{{ path('app_orders_show') }}">Commandes</a>
-				<a class="nav-link active text-white mx-2" id="deco" href="{{ path('app_logout') }}">Se déconnecter</a>
+				<div class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle text-white mx-2" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Compte
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li>
+							<a class="dropdown-item" href="{{path('app_user_show', {id: app.user.id})}}">Profil</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href="{{ path('app_orders_show') }}">Commandes</a>
+						</li>
+						<li>
+							<a class="dropdown-item" id="deco" href="{{ path('app_logout') }}">Se déconnecter</a>
+						</li>
+						{% if is_granted('ROLE_ADMIN') %}
+							<li>
+								<a class="dropdown-item" href="{{path('admin')}}">Panel admin</a>
+							</li>
+						{% endif %}
+					</ul>
+				</div>
 			{% endif %}
-			{% if is_granted('ROLE_ADMIN') %}
-				<a class="nav-link active text-white mx-2" href="{{path('admin')}}">Panel admin</a>
-			{% endif %}
+
 		</div>
 		<div>
 			{% if app.user %}
